tests/NormalTests/paczka1/fuzzy1/17551118.err
Error in line 15: S67 A562 0,1
Error in line 26: NMvf S67 77,7
Error in line 27: NMvf S675 98,2
Error in line 24: Crnnuem S67 17,6
Error in line 40: 4QjwTPB AQ62 93,4
